tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/missing-quotes.stderr
TOML parse error at line 1, column 8
  |
1 | name = value
  |        ^
invalid string
expected `"`, `'`
